Diminui o tamanho das imagens usando width, e igualei todos os tamanhos utilizando o height na img jeans, que estava com tamanho diferente

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -131,3 +131,11 @@ td button {
 #back-button:hover {
     background-color: #635a3d
 }
+
+img {
+    width: 70px;
+}
+
+#img-jeans {
+    height: 70px;
+}
