--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -56,7 +56,11 @@ div img {
 }
 
 .icone {
-    height: 15px;
+    height: 25px;
+    width: 25px;
+    position: absolute;
+    bottom: 0;
+    margin-left: 5px;
 }
 
 
@@ -97,6 +101,10 @@ div img {
 div:nth-child(2),
 div:last-child {
     text-align: center;
+}
+
+div:last-child {
+    position: relative;
 }
 
 table {
