Arrumei comportamento dos botões comprar, coloquei todos com a mesma class e usei o atributo hover para o efeito

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -120,6 +120,10 @@ td button {
     color: black;
 }
 
+.botao-comprar:hover {
+    background-color: #FF8C00;
+}
+
 .container-do-search {
     margin-top: 20px;
     height: 100px;
