--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -77,7 +77,7 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
-    padding-top: 20px;
+    padding-top: 100px;
 }
 
 #container-de-descricao>ol {
@@ -121,6 +121,7 @@ div:last-child {
 table {
     width: 60%;
     text-align: center;
+    margin: auto;
 }
 
 td button {
@@ -140,6 +141,9 @@ td button {
     height: 100px;
 }
 
+#div-back-button {
+    text-align: center;
+}
 
 #back-button {
     background-color: white;
