--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -93,6 +93,10 @@ div>p:first-child {
     list-style-position: inside;
 }
 
+#li-numero2 {
+    margin-right: 20px ;
+}
+
 #container-para-comprar {
     background-color: #e7eb90;
 }
