--- a/quinzena2/aula7-responsividade/responsivo-flex/index.css
+++ b/quinzena2/aula7-responsividade/responsivo-flex/index.css
@@ -6,6 +6,7 @@ body {
 }
 
 #main-container {
+    max-width: 100vw;
     border: none;
     display: flex;
     flex-wrap: wrap;
@@ -20,6 +21,7 @@ div {
     background-color: red;
     width: 100vw;
     height: 10vh;
+    margin-bottom: 1vh;
 }
 
 .blue-block, .yellow-block, .green-block {
