--- a/quinzena2/aula7-responsividade/responsivo-grid/index.css
+++ b/quinzena2/aula7-responsividade/responsivo-grid/index.css
@@ -6,6 +6,7 @@ body {
 }
 
 #main-container {
+    overflow-x: hidden;
     border: none;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr 2fr;
@@ -27,7 +28,7 @@ div {
     justify-content: center;
     align-items: center;
     height: 12vh;
-    margin: 1vh 1vh;
+    margin: 1vh 1.5vh;
 }
 
 .blue-block {
@@ -52,7 +53,7 @@ div {
     background-color: black;
     color: white;
     height: 30vh;
-    margin: 1vh 1vh;
+    margin: 1vh 1.5vh;
 }
 
 #item7 {
@@ -81,7 +82,7 @@ div {
     align-items: center;
     background-color: white;
     height: 12vh;
-    margin: 1vh 1vh;
+    margin: 1vh 1.5vh;
 }
 
 @media screen and (min-width: 340px) and (max-width: 520px) {
