--- a/semana2/labetube/index.css
+++ b/semana2/labetube/index.css
@@ -61,6 +61,9 @@ video {
 }
 
 footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 3em;
     background-color: #757575;
@@ -102,19 +105,93 @@ h2 {
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-
-}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) and (max-width:768px) {
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) and (max-width: 800px) {
     main {
-        grid-template: 1fr 3fr 1fr 3fr 1fr 3fr 1fr 3fr/ repeat(2, 1fr);
+        grid-template: 0.5fr 3fr 0.5fr 3fr 0.5fr 3fr 0.5fr 3fr/1fr;
+        height: 80%;
     }
 
-}
+    .campo-buscar {
+        width: 50vw;
+    }
 
+    h3 {
+        margin-top: 30px;
+    }
+
+    video, h3 {
+        width: 80vw;
+    }
+
+    #titulo-video-1 {
+        order: 0;
+    }
+
+    #video-1 {
+        order: 1;
+    }
+
+    #titulo-video-2 {
+        order: 2;
+    }
+
+    #video-2 {
+        order: 3;
+    }
+
+    #titulo-video-3 {
+        order: 4;
+    }
+
+    #video-3 {
+        order: 5;
+    }
+
+    #titulo-video-4 {
+        order: 6;
+    }
+
+    #video-4 {
+        order: 7;
+    }
+
+    #titulo-video-5 {
+        order: 8;
+    }
+
+    #video-5 {
+        order: 9;
+    }
+
+    #titulo-video-6 {
+        order: 10;
+    }
+
+    #video-6 {
+        order: 11;
+    }
+
+    #titulo-video-6 {
+        order: 12;
+    }
+
+    #video-6 {
+        order: 13;
+    }
+
+    #titulo-video-7 {
+        order: 14;
+    }
+
+    #video-7 {
+        order: 15;
+    }
+
+    #titulo-video-8 {
+        order: 16;
+    }
+
+    #video-8 {
+        order: 17;
+    }
+}
 
