--- a/semana2/labetube/index.css
+++ b/semana2/labetube/index.css
@@ -107,7 +107,7 @@ h2 {
 @media only screen and (max-width: 600px) {
     main {
         grid-template: 0.5fr 3fr 0.5fr 3fr 0.5fr 3fr 0.5fr 3fr/1fr;
-        height: 80%;
+        height: 80vh;
     }
 
     .campo-buscar {
@@ -192,6 +192,10 @@ h2 {
 
     #video-8 {
         order: 17;
+    }
+
+    .video-detalhe {
+        width: 90vw;
     }
 }
 
