--- a/semana2/landing-page/index.css
+++ b/semana2/landing-page/index.css
@@ -18,7 +18,7 @@ header {
 
 nav {
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1.8vw;
     color: #cdcdcd;
 }
 
@@ -57,11 +57,11 @@ div {
 }
 
 h3 {
-    font-size: 38px;
+    font-size: 3vw;
 }
 
 h4 {
-    font-size: 22px;
+    font-size: 2vw;
     margin: 10px 0;
 }
 
@@ -71,6 +71,7 @@ h4 {
 }
 
 .valores-emprestimo {
+    font-size: 1.5vw;
     padding: 1.5vw;
     background-color: #1F1F24 ;
     border-radius: 10px;
@@ -86,7 +87,6 @@ h4 {
 }
 
 /* Sessao vantagens*/
-
 #section-vantagens {
     display: grid;
     align-items: center;
@@ -109,6 +109,7 @@ h4 {
 }
 
 .simular-emprestimo {
+    font-size: 1.5vw;
     border-radius: 10px;
     background-color: #8a7d6f;
     color: #FFF;
@@ -157,14 +158,20 @@ footer {
 }
 
 /* Responsivo */
-@media only screen and (min-width:350px) and (max-width:500px){
+@media only screen and (min-width:350px) and (max-width:600px){
 
-    nav {
-        font-size: 12px;
+    header {
+        justify-content: center;
+        display: flex;
+        flex-wrap: wrap;
     }
 
-    li, a {
-        padding: 1.5vw;
+    #logo-upfour {
+        width: 80%;
+    }
+
+    nav {
+        font-size: 4vw;
     }
 
     div {
@@ -173,12 +180,12 @@ footer {
 
     h3 {
         text-align: center;
-        font-size: 26px;
+        font-size: 7vw;
     }
 
     h4 {
         text-align: center;
-        font-size: 18px;
+        font-size: 5vw;
     }
 
     #section-principal {
@@ -190,11 +197,16 @@ footer {
         flex-wrap: wrap;
     }
 
+    .valores-emprestimo {
+        font-size: 4vw;
+    }
+
     #mulher-negra-celular {
         width: 50%;
     }
 
     .simular-emprestimo {
+        font-size: 3vw;
         width: 100%;
         height: 3em;
     }
@@ -208,6 +220,7 @@ footer {
     p {
         text-align:center;
         margin: 2vw 0;
+        font-size: 4vw;
     }
 
     footer {
