adicionei o icone para salvar um post com funcao para mudar de cor quando clicado

--- a/semana5/insta4/src/components/Post/Post.css
+++ b/semana5/insta4/src/components/Post/Post.css
@@ -29,3 +29,9 @@
 .post-photo {
     width: 100%;
 }
+
+.save-icon-container {
+    align-self: center;
+    margin-left: auto;
+    margin-right: 5px;
+}
