estilizei o arquivo Post.js usando styled-components

--- a/semana5/insta4/src/components/IconeSalvos/IconeSalvos.css
+++ b/semana5/insta4/src/components/IconeSalvos/IconeSalvos.css
@@ -6,3 +6,9 @@
 .icon-container img {
     margin-right: 5px;
 }
+
+.save-icon-container {
+    align-self: center;
+    margin-left: auto;
+    margin-right: 5px;
+}
