--- a/semana5/insta4/src/components/Post/Post.css
+++ b/semana5/insta4/src/components/Post/Post.css
@@ -1,37 +1,31 @@
-.post-container {
+/* .post-container {
     border: 1px solid gray;
     width: 300px;
     margin-bottom: 10px;
-}
+} */
 
-.post-header {
+/* .post-header {
     height: 40px;
     display: flex;
     align-items: center;
     padding-left: 10px;
-}
+} */
 
-.post-footer {
+/* .post-footer {
     height: 40px;
     display: flex;
     align-items: center;
     padding: 0 10px;
     justify-content: space-between;
-}
+} */
 
-.user-photo {
+/* .user-photo {
     height: 30px;
     width: 30px;
     margin-right: 10px;
     border-radius: 50%;
-}
+} */
 
-.post-photo {
+/* .post-photo {
     width: 100%;
-}
-
-.save-icon-container {
-    align-self: center;
-    margin-left: auto;
-    margin-right: 5px;
-}
+} */
